--- a/getting-started/first-test-experience/building-and-running-tests.mdx
+++ b/getting-started/first-test-experience/building-and-running-tests.mdx
@@ -1,182 +1,188 @@
 ---
-title: "Building and Running Tests"
-description: "Learn how to compile and execute your tests using your chosen build system. Get specific instructions for both CMake and Bazel users on different platforms, and see expected output for successful test runs."
+title: "Building and Running Your Test Suite"
+description: "Shows users how to compile and execute their tests using either the test runner main, examples of command-line invocation, and what expected output looks like. Reinforces success criteria and validates environment setup."
 ---
 
-# Building and Running Tests
+# Building and Running Your Test Suite
 
-Learn how to compile your tests and execute them using your preferred build system. This guide provides specific instructions for building and running tests with both CMake and Bazel on supported platforms. You will also see how to interpret the expected output after a successful test run.
+This guide walks you through compiling and executing your GoogleTest test suites. It explains how to use the test runner `main()`, run tests from the command line, interpret the output, and verify your environment is correctly set up.
 
 ---
 
-## 1. Prerequisites
+## 1. Compiling Your Tests
 
-- Ensure you have installed GoogleTest and have your test source code ready (e.g., your `*_test.cc` file).
-- Have your build system configured to find GoogleTest headers and libraries.
-- For CMake users, have CMake 3.14 or later installed.
-- For Bazel users, your workspace must include GoogleTest as a workspace dependency.
+Before running tests, you must compile your test source files with GoogleTest and GoogleMock libraries.
 
-> **Note:** Building and running tests requires a C++17-capable compiler and a supported platform (Linux, Windows, Mac).
+### Using the Provided Test Runner Main
 
-## 2. Building Tests with Your Build System
+GoogleTest supplies a default `main()` function in the `gtest_main` library that initializes the framework and runs all registered tests. Linking with `gtest_main` is the recommended approach unless you need custom behavior.
 
-### 2.1 Building with CMake
-
-GoogleTest provides CMake support for seamless integration. There are two main approaches:
-
-#### A) Standalone CMake Build
-
-1. Clone or download GoogleTest source.
-2. Create a separate `build` directory.
-3. Run CMake configuration:
+Example compilation command (assuming CMake and installed libraries):
 
 ```bash
-mkdir build && cd build
-cmake ..           # To build both GoogleTest and GoogleMock
-# or
-cmake .. -DBUILD_GMOCK=OFF  # To build GoogleTest only
+# Compile your test source (e.g., example_test.cpp) and link with gtest_main
+clang++ -std=c++17 -isystem /usr/local/include -pthread \
+  example_test.cpp -L/usr/local/lib -lgtest_main -lgtest -lgmock -o example_test
 ```
 
-4. Build the project:
+If your environment differs, integrate linking with `gtest_main` as described in your build system.
+
+### Writing a Custom main()
+
+If you require setup beyond what `gtest_main` provides, implement your own `main()` that calls GoogleTest initialization and runs tests:
+
+```cpp
+#include <gtest/gtest.h>
+
+int main(int argc, char** argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+The function `InitGoogleTest()` parses GoogleTest-specific flags from command line arguments, so it **must** be called before `RUN_ALL_TESTS()`.
+
+---
+
+## 2. Running Your Tests
+
+Once compiled, run your test executable from the command line:
 
 ```bash
-make                # Unix-like systems
-# or
-cmake --build .     # Cross-platform command
+./example_test
 ```
 
-5. Optionally, install GoogleTest system-wide (requires admin rights):
+GoogleTest automatically discovers and runs all tests linked into the executable.
+
+### Basic Command-Line Options
+
+You can control test execution with flags:
+
+- `--gtest_filter=TestSuiteName.TestName`
+  - Run only the specified test or tests matching a pattern
+- `--gtest_repeat=N`
+  - Repeat all tests N times
+- `--gtest_shuffle`
+  - Randomize test order
+- `--gtest_output=[xml|json]:path`
+  - Emit test results to a file
+
+Example: Run only `FactorialTest.HandlesZeroInput` test
 
 ```bash
-sudo make install    # Unix-like platforms
+./example_test --gtest_filter=FactorialTest.HandlesZeroInput
 ```
 
-#### B) Integrate GoogleTest into Your Own CMake Project
+### Using `RUN_ALL_TESTS()` Return Code
 
-- Add GoogleTest as a subdirectory or use `FetchContent` in your `CMakeLists.txt`:
+The test executable returns `0` if all tests pass, or `1` if any test fails. This behavior allows integration with CI systems and scripts.
 
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
-)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE) # For Windows runtime compatibility
-FetchContent_MakeAvailable(googletest)
-
-add_executable(my_tests my_tests.cpp)
-target_link_libraries(my_tests gtest_main)
-add_test(NAME my_tests COMMAND my_tests)
-```
-
-- Then build your project normally with `cmake` and your native build tool.
-
-### 2.2 Building with Bazel
-
-1. Add GoogleTest to your `WORKSPACE` file, for example:
-
-```python
-http_archive(
-    name = "com_google_googletest",
-    url = "https://github.com/google/googletest/archive/release-1.17.0.tar.gz",
-    strip_prefix = "googletest-release-1.17.0",
-)
-```
-
-2. Add `@com_google_googletest//:gtest` or `@com_google_googletest//:gtest_main` as a dependency in your `BUILD` files.
-
-3. Define test targets and build:
-
-```bazel
-cc_test(
-    name = "my_test",
-    srcs = ["my_test.cc"],
-    deps = ["@com_google_googletest//:gtest_main"],
-)
-```
-
-4. Build and run tests:
+Use it in your shell as:
 
 ```bash
-bazel build //path/to:my_test
-bazel test //path/to:my_test
+./example_test && echo "All tests passed" || echo "Some tests failed"
 ```
 
-## 3. Running Your Tests
+---
 
-Regardless of build method, after building the test executable (e.g., `my_tests`), run it directly:
+## 3. Understanding Test Output
 
-```bash
-./my_tests
-```
+When you run your test executable, the output provides detailed results.
 
-Or, with Bazel:
-
-```bash
-bazel test //path/to:my_test
-```
-
-### Expected Output
-
-Your test suite will print progress and results similar to:
+### Sample Output
 
 ```plaintext
-[==========] Running 3 tests from 1 test suite.
+Running main() from gtest_main.cc
+[==========] Running 2 tests from 1 test suite.
 [----------] Global test environment set-up.
-[----------] 3 tests from FooTest
-[ RUN      ] FooTest.Test1
-[       OK ] FooTest.Test1 (0 ms)
-[ RUN      ] FooTest.Test2
-[       OK ] FooTest.Test2 (1 ms)
-[ RUN      ] FooTest.Test3
-[       OK ] FooTest.Test3 (0 ms)
-[----------] 3 tests from FooTest (1 ms total)
+[----------] 2 tests from FactorialTest
+[ RUN      ] FactorialTest.HandlesZeroInput
+[       OK ] FactorialTest.HandlesZeroInput (0 ms)
+[ RUN      ] FactorialTest.HandlesPositiveInput
+[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
+[----------] 2 tests from FactorialTest (0 ms total)
 
 [----------] Global test environment tear-down
-[==========] 3 tests from 1 test suite ran. (1 ms total)
-[  PASSED  ] 3 tests.
+[==========] 2 tests from 1 test suite ran. (0 ms total)
+[  PASSED  ] 2 tests.
 ```
 
-- Each test reports its result with `[ RUN      ]`, `[       OK ]`, or `[  FAILED  ]` messages.
-- The summary at the end confirms successful or failed tests and timing.
+#### What This Means
 
-## 4. Tips and Best Practices
+- Each test is listed with its status: `[ RUN      ]`, `[       OK ]` for success, or `[  FAILED  ]` for failure.
+- Summary lines show how many tests and suites ran and their outcome.
+- Elapsed times help identify slow tests.
 
-- Use `gtest_main` if possible to avoid writing your own `main()` function. It automatically handles initialization and test execution.
-- Review the CMake or Bazel documentation for your environment to adapt the snippets as necessary.
-- Use `--gtest_list_tests` flag to list all tests without executing them.
+### Interpreting Failure Output
 
-```bash
-./my_tests --gtest_list_tests
+Failed assertions display error messages, source file, and line number to help pinpoint issues.
+
+```plaintext
+example_test.cpp:42: Failure
+Expected equality of these values:
+  Factorial(3)
+    Which is: 5
+  6
 ```
 
-- Use `--gtest_filter=TestSuiteName.TestName` to run specific tests.
-- Always check the return value of `RUN_ALL_TESTS()` in your `main()` or test runner.
+This shows the test file and line with failure details.
 
-## 5. Troubleshooting
+---
 
-- **Build errors:** Verify C++17 compatibility and correct linkage to GoogleTest libraries.
-- **Missing tests at runtime:** Check filtering flags or disabled tests with `DISABLED_` prefix.
-- **Runtime errors:** Use `--gtest_break_on_failure` to trigger debugger break at the failure.
-- **Environment issues:** Ensure search paths for includes and libraries are correctly set in your build configuration.
+## 4. Validating Your Environment
+
+Successful test runs confirm your GoogleTest environment is set up correctly.
+
+### What to Check
+
+- Your test executable runs without linker errors.
+- Tests are discovered and run automatically without manual enumeration.
+- The test output shows the expected number of tests executed.
+- If you use `gtest_main`, the "Running main() from gtest_main.cc" message appears.
+
+### Troubleshooting
+
+<AccordionGroup title="Common Issues and Fixes">
+<Accordion title="Tests Not Running or Found">
+Verify your `main()` calls `InitGoogleTest()` and `RUN_ALL_TESTS()`.
+
+Check your build links against `gtest_main` or implement your own main properly.
+
+Ensure tests are not disabled (names not prefixed with `DISABLED_`).
+</Accordion>
+<Accordion title="Linker Errors Related to gtest_main">
+If linking against `gtest_main` fails, confirm you are linking in the correct order and have installed GoogleTest properly.
+
+Alternatively, consider writing your own `main()` as shown above.
+</Accordion>
+<Accordion title="Unexpected Test Failures or Crashes">
+Inspect failure messages and line numbers.
+
+Use test isolation techniques like `TEST_F` fixtures.
+
+Review whether your code requires environment or external resources.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## 5. Best Practices and Tips
+
+- **Leverage `gtest_main`** unless you need special startup/shutdown logic.
+- **Use command-line flags** to focus test runs and diagnose issues efficiently.
+- **Check return codes** from test executables in CI pipelines for automation.
+- **Review output carefully** to identify failed tests, ignored tests, and performance bottlenecks.
+- **Write small, independent tests** to maximize repeatability and debuggability.
+
+---
 
 ## 6. Next Steps
 
-- Write your first test using `TEST` or `TEST_F` macros ([Writing Your First Test](hello-test)).
-- Validate your setup by running sample tests to confirm the environment.
-- Learn about advanced configuration and options in [Initial Configuration](configuration).
-- Explore strategies for effective test suite design in [Test Suite Structure and Best Practices](best-practices).
+- Explore [Writing Your First Test Case](../first-test-experience/writing-your-first-test) for guided test creation.
+- Review [Installation Instructions](../setup-and-installation/installation-platforms) if your build or linking fails.
+- Consult [Troubleshooting and Common Setup Issues](../first-test-experience/troubleshooting-and-validation) for advanced diagnostics.
+- Learn how to organize tests better via [Structuring Test Cases and Test Suites](../../guides/core-workflows/structuring-tests).
 
 ---
 
-For more detailed commands and examples, see the related documentation on:
-
-- [GoogleTest Primer](../primer.md)
-- [Installation Methods](installation-methods)
-- [Running Tests: Flags and Options](reference/testing.md#running-tests)
-
----
-
-<Info>
-Running tests successfully means your build system can compile, link, and properly execute your test binaries, and GoogleTest can discover your tests and report results.
-</Info>
+_For full command line options and detailed test runner behaviors, see the [Advanced Guide](../../advanced.md) and [Testing Reference](../reference/testing.md)._
