--- a/guides/core-workflows/getting-started.mdx
+++ b/guides/core-workflows/getting-started.mdx
@@ -1,217 +1,217 @@
 ---
-title: "Getting Started with GoogleTest"
-description: "A practical walkthrough covering installation, project setup, and writing your first GoogleTest test case. This guide helps developers establish a baseline for using GoogleTest in new or existing C++ projects."
+title: "Getting Started: Writing and Running Your First Test"
+description: "A quick-start walkthrough that introduces writing your first C++ test using GoogleTest. Learn how to set up the framework, write basic assertions, and execute your test with the provided test runners. Ideal for users new to GoogleTest or those seeking a fast, practical entry point."
 ---
 
-# Getting Started with GoogleTest
+# Getting Started: Writing and Running Your First Test
 
-This guide provides a practical walkthrough to help you install GoogleTest, set up your C++ project, and write your first test case with GoogleTest. It is designed for developers new to GoogleTest or those establishing a baseline for incorporating it into existing projects.
-
----
-
-## 1. What You Will Achieve
-
-By following this guide, you will:
-
-- Successfully install GoogleTest in a C++ project using CMake.
-- Understand how to write and organize simple unit tests.
-- Build and run your GoogleTest test binaries.
-- Verify that your test setup works correctly.
-
-Expected outcome: a working C++ test executable that runs at least one basic test and provides clear pass/fail output.
-
-Estimated time: 20-30 minutes.
-
-Skill level: Beginner to Intermediate.
+Welcome to your practical introduction to writing your first test in C++ using GoogleTest. This quick-start guide is designed specifically for users new to GoogleTest or those seeking a fast, effective way to write, run, and verify a simple test. You will learn how to set up the framework, write basic assertions, and execute your test using the provided test runners.
 
 ---
 
-## 2. Prerequisites
+## 1. Workflow Overview
 
-Before you begin, make sure you have:
+### What This Guide Will Help You Accomplish
+This guide walks you through the essential steps to create a basic C++ test case with GoogleTest, run it, and observe the results. You will learn to:
 
-- A compatible platform (Linux, macOS, or Windows).
-- A C++ compiler supporting at least C++17 (e.g., GCC, Clang, MSVC).
-- CMake version 3.14 or higher installed.
-- A working terminal or command line environment.
+- Set up your test environment with the minimum includes and setup
+- Write a simple test function using the GoogleTest macro
+- Run the test with the default test runner
+- Understand test outcomes and interpret test output
 
-For installation and platform-specific details, consult the [System Requirements & Supported Platforms](getting-started/setup-and-installation/requirements) page.
+### Prerequisites
+
+Before you begin, ensure the following:
+
+- GoogleTest and GoogleMock are installed and properly set up in your build environment.
+- You are familiar with compiling and running C++ programs.
+- Your codebase supports C++17 or later, as required by GoogleTest.
+- Your build system links against the `gtest_main` or equivalent test runner.
+
+### Expected Outcome
+
+By following this guide, you will have:
+
+- A minimal test file that compiles and runs successfully.
+- An understanding of how to write a test using `TEST()`.
+- Knowledge on how to interpret the test runner output.
+- Confidence to create more complex tests or add mocks later.
+
+### Estimated Time & Difficulty
+
+- **Time**: Approximately 10–15 minutes.
+- **Difficulty**: Beginner.
 
 ---
 
-## 3. Setting Up Your Project with CMake
+## 2. Step-by-Step Instructions
 
-### Step 1: Create Your Project Directory
+These instructions are self-contained and sequential—each step builds on the one before it.
 
-Open your terminal and create a new folder for your project:
+### Step 1: Create a New Test File
+
+- Create a new `.cc` file, for example `my_first_test.cc`.
+- Include the necessary GoogleTest headers.
+
+```cpp
+#include <gtest/gtest.h>
+```
+
+### Step 2: Write Your First Test Case
+
+- Use the `TEST` macro to declare a test function.
+- The `TEST` macro takes two arguments: a test suite name and a test name.
+- Inside the test body, write at least one assertion.
+
+```cpp
+TEST(SimpleTest, AdditionWorks) {
+  int sum = 2 + 3;
+  EXPECT_EQ(sum, 5);  // Checks that sum == 5
+}
+```
+
+<Info>
+The `EXPECT_EQ` macro asserts equality but continues execution if it fails. Use `ASSERT_EQ` for critical failures that should abort the test immediately.
+</Info>
+
+### Step 3: Build Your Test Executable
+
+- Make sure to compile and link your test file with GoogleTest libraries.
+- Commonly, link with `gtest_main` to include a main function automatically.
+
+Example using `g++`:
 
 ```bash
-mkdir my_project && cd my_project
+g++ -std=c++17 my_first_test.cc -lgtest -lgtest_main -pthread -o my_first_test
 ```
 
-### Step 2: Create `CMakeLists.txt`
+### Step 4: Run Your Test Binary
 
-In your project folder, create a file named `CMakeLists.txt` with the following content:
+- Execute your test binary from the command line:
 
-```cmake
-cmake_minimum_required(VERSION 3.14)
-project(my_project)
-
-# Require C++17 standard
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-)
-# On Windows: prevent overriding parent project compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-# Enable testing features
-enable_testing()
-
-# Add executable target for tests
-add_executable(
-  hello_test
-  hello_test.cc
-)
-
-# Link with GoogleTest main library
-target_link_libraries(
-  hello_test
-  GTest::gtest_main
-)
-
-include(GoogleTest)
-gtest_discover_tests(hello_test)
+```bash
+./my_first_test
 ```
 
-> **Tip:** The commit hash in the URL specifies the GoogleTest version. Update it regularly to stay current.
+- Observe the output indicating which tests passed or failed.
+
+Sample output:
+
+```
+Running main() from gmock_main.cc
+[==========] Running 1 test from 1 test suite.
+[----------] Global test environment set-up.
+[----------] 1 test from SimpleTest
+[ RUN      ] SimpleTest.AdditionWorks
+[       OK ] SimpleTest.AdditionWorks (0 ms)
+[----------] 1 test from SimpleTest (0 ms total)
+[----------] Global test environment tear-down
+[==========] 1 test from 1 test suite ran. (0 ms total)
+[  PASSED  ] 1 test.
+```
+
+### Step 5: Verify and Interpret Results
+
+- If all tests pass, your setup and test writing are correct.
+- If any test fails, the output will detail which assertion failed, file and line number, and expected vs actual values.
+- Use this feedback to debug your test or production code.
+
+<Note>
+You can enhance the test with more assertions or test suites. For real-world scenarios, tests will be organized into suites reflecting your code modules.
+</Note>
 
 ---
 
-## 4. Writing Your First Test
+## 3. Examples & Real Scenarios
 
-Create a file named `hello_test.cc` in your project folder and add the following code:
+### Example 1: A Simple Passing Test
 
 ```cpp
 #include <gtest/gtest.h>
 
-// A simple test: verify basic assertions.
-TEST(HelloTest, BasicAssertions) {
-  // Expect two strings to be different.
-  EXPECT_STRNE("hello", "world");
-
-  // Expect numeric equality.
-  EXPECT_EQ(7 * 6, 42);
+TEST(MathTest, SimpleMultiplication) {
+  int result = 6 * 7;
+  EXPECT_EQ(result, 42);
 }
 ```
 
-### What You Did Here:
+When run, this test confirms the correctness of a simple multiplication operation.
 
-- Included the main GoogleTest header.
-- Defined a test case `HelloTest` with a test named `BasicAssertions`.
-- Used `EXPECT` assertions to verify conditions.
+### Example 2: A Failing Test
 
----
-
-## 5. Building and Running the Tests
-
-### Step 1: Configure the Build
-
-From your project root directory, run:
-
-```bash
-cmake -S . -B build
+```cpp
+TEST(StringTest, Concatenation) {
+  std::string s = "Hello" + std::string(" World");
+  EXPECT_EQ(s, "Hello World!");  // Intentional mistake to show failure
+}
 ```
 
-This generates build files in the `build` directory.
+Failing output will point to the exact assertion failure with clear explanation.
 
-### Step 2: Build the Test Binary
+---
 
-Build the test executable with:
+## 4. Troubleshooting & Tips
 
-```bash
-cmake --build build
+### Common Issues
+
+- **Tests not discovered or run**: Verify your main function initialization. Linking with `gtest_main` provides `main()` automatically; if not, ensure that you call `::testing::InitGoogleTest(&argc, argv);` in your main.
+- **Linker errors**: Confirm your project links to GoogleTest (`-lgtest`) and pthread (`-pthread`) libraries.
+- **Assertion failures**: Check correctness of your assertions and logic.
+- **Unrecognized macros**: Make sure your include path contains the GoogleTest headers.
+
+### Best Practices
+
+- Always name your test suites and tests descriptively.
+- Keep tests small and focused on one behavior.
+- Use `EXPECT_*` assertions for non-fatal failures allowing multiple checks per test.
+- Use `ASSERT_*` for fatal checks where proceeding would be meaningless.
+
+### Performance Considerations
+
+- For large projects, compile tests with optimizations and split test files logically.
+- Use the test runner flags to filter and run subsets of relevant tests.
+
+### Alternative Approaches
+
+- Use test fixtures (`TEST_F`) to share setup across multiple tests.
+- Extend tests with mocks using GoogleMock for interaction-based testing.
+
+---
+
+## 5. Next Steps & Related Content
+
+### What's Next
+
+- Explore [Writing Your First Test Case](../getting-started/first-test-experience/writing-your-first-test.md) for more detailed examples and idioms.
+- Learn how to [Build and Run Your Test Suite](../getting-started/first-test-experience/building-and-running-tests.md) with custom runners and multiple files.
+- Integrate mocks and explore advanced mocking patterns in [Mocking for Dummies](../gmock_for_dummies.md) and the [gMock Cookbook](../gmock_cook_book.md).
+
+### Related Guides
+
+- [Troubleshooting and Common Setup Issues](../getting-started/first-test-experience/troubleshooting-and-validation.md)
+- [Using Assertions Effectively](../guides/core-workflows/using-assertions.md)
+- [Structuring Test Cases and Test Suites](../guides/core-workflows/structuring-tests.md)
+
+### Resources
+
+- Official GoogleTest documentation: [https://github.com/google/googletest](https://github.com/google/googletest)
+- Online tutorials and examples linked from the GoogleTest README.
+
+---
+
+### Summary Diagram of the First-Test Workflow
+
+```mermaid
+flowchart TD
+  Start["Start Writing First Test"] --> WriteTest["Write Test Function with TEST()"]
+  WriteTest --> BuildTest["Build Test Executable with gtest_main"]
+  BuildTest --> RunTest["Run Test Executable"]
+  RunTest --> CheckOutput{"Does Test Pass?"}
+  CheckOutput -->|Yes| Done["Success - Test Passed"]
+  CheckOutput -->|No| Debug["Review Assertion Failure Details"]
+  Debug --> WriteTest
 ```
 
-### Step 3: Run the Tests
-
-Run all tests discovered in the executable:
-
-```bash
-cd build && ctest
-```
-
-You should see output similar to:
-
-```
-Test project /path/to/my_project/build
-    Start 1: HelloTest.BasicAssertions
-1/1 Test #1: HelloTest.BasicAssertions ........   Passed    0.00 sec
-
-100% tests passed, 0 tests failed out of 1
-
-Total Test time (real) =   0.01 sec
-```
-
-This confirms your first test is successfully running.
+This flow summarizes the iterative nature of writing and running your first tests.
 
 ---
-
-## 6. Understanding What Happened
-
-- The `hello_test` binary contains your test code and GoogleTest framework.
-- The `gtest_discover_tests` command enables CTest to detect and run tests.
-- Running `ctest` executes the test binary and reports results.
-
-You now have a working test automation setup.
-
----
-
-## 7. Best Practices and Tips
-
-- **Use EXPECT_ vs ASSERT_**: Use `EXPECT_*` assertions to continue test execution after failure. Use `ASSERT_*` to abort the current test if continuing makes no sense.
-- **Name tests clearly**: Test suite names (first argument to `TEST`) should be descriptive and avoid underscores.
-- **Follow C++ conventions**: Use valid C++ identifiers for test and suite names.
-- **Keep tests independent**: Avoid state sharing without fixtures to keep tests isolated.
-
----
-
-## 8. Troubleshooting
-
-- **Missing C++17 support**: Ensure your compiler version supports C++17 and that CMake is configured accordingly.
-- **Build errors on Windows**: Use `set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)` in `CMakeLists.txt` to resolve runtime linkage mismatches.
-- **Tests not discovered**: Confirm that `gtest_discover_tests()` is present and testing is enabled in CMake.
-- **Link errors**: Verify that `target_link_libraries` links to `GTest::gtest_main`.
-
-For detailed common issues, see the [Common Setup Issues](getting-started/troubleshooting-and-faq/common-setup-issues) guide.
-
----
-
-## 9. Next Steps
-
-- Explore the [GoogleTest Primer](primer.md) to learn how to write more expressive and structured tests.
-- Review [GoogleTest Samples](samples.md) to see practical, annotated examples.
-- Learn how to use [Test Fixtures](primer.md#same-data-multiple-tests) to share setup and teardown logic.
-- If using Bazel instead of CMake, consult the [Quickstart for Bazel](quickstart-bazel.md).
-
----
-
-## 10. Additional Resources
-
-- [GoogleTest Assertions Reference](reference/assertions.md) — Understand the variety of assertions available.
-- [GoogleMock User Guide](guides/advanced-testing-patterns/mocking-with-googlemock) — Extend testing with mocks.
-- [GoogleTest FAQ](faq.md) — Answers to common questions.
-
----
-
-Congratulations on taking your first steps with GoogleTest! Once you master the basics, you will be able to build robust, maintainable, and fast C++ test suites.
-
-
----
-
-*This guide is part of the GoogleTest User's Guide and aligns with the Getting Started documentation.*
